# setlist_fm_client

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: client.rs  data.rs  error.rs  lib.rs
tests/: tests.rs
